--- a/index.html
+++ b/index.html
@@ -1,113 +1,72 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1"/>
-  <title>Healthy Hero VR: Dance! — V2</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Fitness Adventure VR (WebXR)</title>
   <script src="https://aframe.io/releases/1.5.0/aframe.min.js"></script>
-  <style>body{margin:0;background:#000}.btn{position:fixed;right:12px;bottom:12px;padding:10px 14px;color:#111;background:#fff;border-radius:10px;font-family:system-ui,sans-serif}</style>
+  <style>
+    .ui { position: fixed; left: 12px; bottom: 12px; z-index: 10; font-family: system-ui, Arial; }
+    .ui button{ padding:10px 14px; margin-right:6px; border-radius:12px; border: none; font-weight:600; box-shadow: 0 2px 8px rgba(0,0,0,.15)}
+    .hud { position: fixed; right: 12px; top: 12px; z-index: 10; font-family: system-ui, Arial; background: rgba(0,0,0,.45); color:#fff; padding:10px 14px; border-radius:12px; min-width:180px }
+    .hud b { font-size: 18px }
+  </style>
 </head>
 <body>
-  <a-scene renderer="colorManagement: true" background="color: #070914">
-    <a-assets>
-      <audio id="bgm" src="assets/song.wav" preload="auto"></audio>
-      <audio id="sfxPerfect" src="assets/perfect.wav" preload="auto"></audio>
-      <audio id="sfxGood" src="assets/good.wav" preload="auto"></audio>
-      <audio id="sfxMiss" src="assets/miss.wav" preload="auto"></audio>
+  <div class="ui">
+    <button id="btnStart">Start</button>
+    <button id="btnHow">How to Play</button>
+  </div>
+  <div class="hud" id="hud" hidden>
+    <div><b>Fitness Adventure</b></div>
+    <div>Time: <span id="hudTime">60</span>s</div>
+    <div>Score: <span id="hudScore">0</span></div>
+    <div>Combo: <span id="hudCombo">0</span></div>
+  </div>
 
-      <img id="arrowUpImg" src="assets/arrow_up.png"/>
-      <img id="arrowDownImg" src="assets/arrow_down.png"/>
-      <img id="arrowLeftImg" src="assets/arrow_left.png"/>
-      <img id="arrowRightImg" src="assets/arrow_right.png"/>
-      <img id="arrowUpOutlineImg" src="assets/arrow_up_outline.png"/>
-      <img id="arrowDownOutlineImg" src="assets/arrow_down_outline.png"/>
-      <img id="arrowLeftOutlineImg" src="assets/arrow_left_outline.png"/>
-      <img id="arrowRightOutlineImg" src="assets/arrow_right_outline.png"/>
-    </a-assets>
-
+  <a-scene renderer="antialias: true; colorManagement: true" background="color: #1e2a38">
     <a-entity id="rig" position="0 1.6 3">
-      <a-camera wasd-controls="acceleration: 25">
-        <a-entity id="gaze" cursor="fuse: true; fuseTimeout: 800" raycaster="objects: .clickable" position="0 0 -1" geometry="primitive: ring; radiusInner: 0.01; radiusOuter: 0.016" material="color: #fff; shader: flat"></a-entity>
-      </a-camera>
-    </a-entity>
-
-    <a-entity light="type: ambient; intensity: 0.9"></a-entity>
-    <a-entity light="type: directional; intensity: 0.45" position="1 3 2"></a-entity>
-
-    <a-entity id="bg">
-      <a-sky color="#090f1f"></a-sky>
-      <a-entity position="0 0 -3" rotation="-90 0 0">
-        <a-plane width="40" height="40" material="color:#0b1024; opacity:0.95; metalness:0.2; roughness:0.9"></a-plane>
+      <a-entity id="camera" camera look-controls wasd-controls="enabled:false"></a-entity>
+      <a-entity id="cursor" cursor="fuse:false" raycaster="objects: .clickable" position="0 0 -0.1">
+        <a-ring radius-inner="0.005" radius-outer="0.008" color="#fff"></a-ring>
       </a-entity>
+      <a-sphere id="leftHand" radius="0.05" color="#66ccff" position="-0.25 1.2 -0.2" opacity="0.5"></a-sphere>
+      <a-sphere id="rightHand" radius="0.05" color="#ff99cc" position="0.25 1.2 -0.2" opacity="0.5"></a-sphere>
     </a-entity>
 
-    <a-entity id="ui-splash" visible="true" position="0 1.6 -1.45">
-      <a-plane width="2.2" height="1.2" color="#0b1226" material="opacity:0.92; depthTest:false; transparent:true"></a-plane>
-      <a-text shader="msdf" negate="false" material="depthTest:false; transparent:true" value="Healthy Hero VR: Dance!" color="#e5e7eb" width="1.9" align="center" position="0 0.34 0.03"></a-text>
-      <a-text shader="msdf" negate="false" material="depthTest:false; transparent:true" value="Look & tap to continue" color="#b5c3ff" width="1.6" align="center" position="0 0.07 0.03"></a-text>
-      <a-plane id="btn-continue" class="clickable" width="1.3" height="0.26" color="#22c55e" position="0 -0.26 0" material="depthTest:false; transparent:true">
-        <a-text shader="msdf" negate="false" material="depthTest:false; transparent:true" value="CONTINUE" align="center" color="#052e16" width="1.0" position="0 0 0.03"></a-text>
-      </a-plane>
+    <a-plane rotation="-90 0 0" width="20" height="120" color="#2b3b4d" position="0 0 0"></a-plane>
+    <a-plane rotation="-90 0 0" width="2" height="120" color="#2f4f6f" position="0 0 0"></a-plane>
+
+    <a-entity light="type: ambient; color: #BBD1FF; intensity: 0.6"></a-entity>
+    <a-entity light="type: directional; color: #FFF; intensity: 0.8" position="1 2 0"></a-entity>
+
+    <a-entity id="titleBoard" position="0 1.6 -1.8">
+      <a-plane width="1.8" height="1" color="#0e1726" opacity="0.95" material="shader: standard; emissive: #0e1726; emissiveIntensity: .4"></a-plane>
+      <a-entity text="value: FITNESS ADVENTURE VR; align: center; color: #FFFFFF; width: 2.2"></a-entity>
+      <a-entity position="0 -0.33 0" text="value: Move to dodge, punch targets, raise hands.; align:center; color:#CFE8FF; width: 2"></a-entity>
     </a-entity>
 
-    <a-entity id="ui-menu" visible="false" position="0 1.6 -1.45">
-      <a-plane width="2.4" height="1.35" color="#0b1226" material="opacity:0.92; depthTest:false; transparent:true"></a-plane>
-      <a-text shader="msdf" negate="false" material="depthTest:false; transparent:true" value="Dance Game" color="#e5e7eb" width="2.0" align="center" position="0 0.46 0.03"></a-text>
-      <a-plane id="btn-play" class="" width="1.6" height="0.28" color="#60a5fa" position="0 0.14 0" material="depthTest:false; transparent:true">
-        <a-text shader="msdf" negate="false" material="depthTest:false; transparent:true" value="Play (Timer Mode)" align="center" color="#032d4a" width="1.2" position="0 0 0.03"></a-text>
-      </a-plane>
-      <a-plane id="btn-practice" class="" width="1.6" height="0.28" color="#86efac" position="0 -0.16 0" material="depthTest:false; transparent:true">
-        <a-text shader="msdf" negate="false" material="depthTest:false; transparent:true" value="Practice (No Timer)" align="center" color="#064e3b" width="1.2" position="0 0 0.03"></a-text>
-      </a-plane>
-      <a-plane id="btn-howto" class="" width="1.6" height="0.28" color="#fde68a" position="0 -0.46 0" material="depthTest:false; transparent:true">
-        <a-text shader="msdf" negate="false" material="depthTest:false; transparent:true" value="How to Play" align="center" color="#6b4005" width="1.2" position="0 0 0.03"></a-text>
-      </a-plane>
+    <a-entity id="world"></a-entity>
+
+    <a-entity id="fxTemplate" position="0 2 -2" visible="false">
+      <a-entity id="fxText" text="value: PERFECT; align:center; color:#7CFC00; width: 3"></a-entity>
     </a-entity>
 
-    <a-entity id="ui-howto" visible="false" position="0 1.6 -1.45">
-      <a-plane width="2.4" height="1.35" color="#0b1226" material="opacity:0.92; depthTest:false; transparent:true"></></a-plane>
-      <a-text shader="msdf" negate="false" material="depthTest:false; transparent:true" value="How to Play" color="#e5e7eb" width="2.0" align="center" position="0 0.46 0.03"></a-text>
-      <a-text shader="msdf" negate="false" material="depthTest:false; transparent:true" value="Music plays. Colored arrows fly to lanes. Look & tap (or pinch) the matching lane right on beat. Score higher with Perfects!" color="#cfe" width="2.1" position="-1.1 0.14 0.03"></a-text>
-      <a-plane id="btn-back-menu" class="" width="1.1" height="0.26" color="#93c5fd" position="0 -0.46 0" material="depthTest:false; transparent:true">
-        <a-text shader="msdf" negate="false" material="depthTest:false; transparent:true" value="Back" align="center" color="#062" width="0.9" position="0 0 0.03"></a-text>
-      </a-plane>
+    <a-entity id="summaryPanel" visible="false" position="0 1.6 -2">
+      <a-plane width="1.8" height="1.1" color="#0e1726" opacity="0.95" material="shader: standard; emissive: #0e1726; emissiveIntensity: .3"></a-plane>
+      <a-entity id="sumTitle" position="0 0.3 0" text="value: SUMMARY; align:center; color:#FFFFFF; width: 2.2"></a-entity>
+      <a-entity id="sumStars" position="0 0.05 0" text="value: ★☆☆; align:center; color:#FFD166; width: 2"></a-entity>
+      <a-entity id="sumStats" position="0 -0.22 0" text="value: Score: 0 | Time: 60s; align:center; color:#CFE8FF; width: 2"></a-entity>
     </a-entity>
 
-    <a-entity id="hud" visible="false">
-      <a-entity id="hud-panel" position="0 2.42 -1.85">
-        <a-plane width="2.0" height="0.34" color="#0b1220" material="opacity:0.86; depthTest:false; transparent:true"></a-plane>
-        <a-text id="hud-left" shader="msdf" negate="false" material="depthTest:false; transparent:true" value="Time: 60" color="#c7d2fe" width="1.0" position="-0.9 0 0.03"></a-text>
-        <a-text id="hud-mid" shader="msdf" negate="false" material="depthTest:false; transparent:true" value="Combo: 0" color="#c7d2fe" width="0.6" align="center" position="0 0 0.03"></a-text>
-        <a-text id="hud-right" shader="msdf" negate="false" material="depthTest:false; transparent:true" value="Score: 0" color="#c7d2fe" width="1.0" align="right" position="0.9 0 0.03"></a-text>
-      </a-entity>
-    </a-entity>
-
-    <a-entity id="arena" visible="false" position="0 1.6 -2.6">
-      <a-plane id="lane-up" class="lane clickable" width="0.7" height="0.2" color="#121a34" position="0 0.62 0" material="opacity:0.95"></a-plane>
-      <a-plane id="lane-left" class="lane clickable" width="0.7" height="0.2" color="#121a34" position="-0.9 0.2 0" material="opacity:0.95"></a-plane>
-      <a-plane id="lane-right" class="lane clickable" width="0.7" height="0.2" color="#121a34" position="0.9 0.2 0" material="opacity:0.95"></a-plane>
-      <a-plane id="lane-down" class="lane clickable" width="0.7" height="0.2" color="#121a34" position="0 -0.22 0" material="opacity:0.95"></a-plane>
-
-      <a-image src="#arrowUpOutlineImg" position="0 0.62 0.009" width="0.38" height="0.38" material="depthTest:false; transparent:true"></a-image>
-      <a-image src="#arrowUpImg" position="0 0.62 0.01" width="0.32" height="0.32"></a-image>
-
-      <a-image src="#arrowLeftOutlineImg" position="-0.9 0.2 0.009" width="0.38" height="0.38" material="depthTest:false; transparent:true"></a-image>
-      <a-image src="#arrowLeftImg" position="-0.9 0.2 0.01" width="0.32" height="0.32"></a-image>
-
-      <a-image src="#arrowRightOutlineImg" position="0.9 0.2 0.009" width="0.38" height="0.38" material="depthTest:false; transparent:true"></a-image>
-      <a-image src="#arrowRightImg" position="0.9 0.2 0.01" width="0.32" height="0.32"></a-image>
-
-      <a-image src="#arrowDownOutlineImg" position="0 -0.22 0.009" width="0.38" height="0.38" material="depthTest:false; transparent:true"></a-image>
-      <a-image src="#arrowDownImg" position="0 -0.22 0.01" width="0.32" height="0.32"></a-image>
-
-      <a-entity id="spawn-root"></a-entity>
-    </a-entity>
-
-    <a-entity id="click-handler"></a-entity>
-    <a-entity id="leftHand"  hand-tracking-controls="hand: left"></a-entity>
-    <a-entity id="rightHand" hand-tracking-controls="hand: right"></a-entity>
+    <a-assets>
+      <audio id="sfxPerfect" src="assets/sfxPerfect.wav"></audio>
+      <audio id="sfxGood" src="assets/sfxGood.wav"></audio>
+      <audio id="sfxMiss" src="assets/sfxMiss.wav"></audio>
+      <audio id="bgm" src="assets/bgm.wav"></audio>
+    </a-assets>
   </a-scene>
-  <button class="btn" onclick="document.querySelector('a-scene').enterVR()">Enter VR</button>
-  <script src="./game.js"></script>
+
+  <script src="game.js"></script>
 </body>
 </html>
